[tool.poetry]
name = "activity-display"
version = "0.1.0"
description = ""
authors = ["Andrew Lee <hello@vndrewlee.com>"]
readme = "README.md"
packages = [{include = "activity_display"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
google-cloud-bigquery = "^3.3.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
